# RTZroute_pi

./: CMakeLists.txt  Plugin.cmake  README.md  RTZroute_pi.fbp
cmake/: PluginLibs.cmake  TemplateVersion
po/: POTFILES.in  RTZroute_pi.pot  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  es_ES.po  et_EE.po  fi_FI.po  fr_FR.po  gl_ES.po  hu_HU.po  it_IT.po  ja_JP.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_PT.po  ru_RU.po  sv_SE.po  tr_TR.po  vi_VN.po  zh_TW.po
src/: NavFunc.cpp  NavFunc.h  RTZroute_pi.cpp  RTZroute_pi.h  RTZroutegui.cpp  RTZroutegui.h  RTZroutegui_impl.cpp  RTZroutegui_impl.h  icons.cpp  icons.h  load-grammar-dom.cpp  load-grammar-dom.h  load-grammar-sax.cpp  load-grammar-sax.h  ocpn_plugin.h
src/xercesc/: xerces-c_3.lib
src/xercesc/cmake/: XercesCConfig.cmake  XercesCConfigInternal-relwithdebinfo.cmake  XercesCConfigInternal.cmake  XercesCConfigVersion.cmake
src/xercesc/include/xercesc/util/: XercesVersion.hpp
src/xercesc/lib/: xerces-c_3.lib
src/xercesc/lib/pkgconfig/: xerces-c.pc
